// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PollutantStats initialization should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PollutantStats
    chem={
      Object {
        "precision": 32924,
        "pressure": 1000,
        "value": 100,
      }
    }
    type="co"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "co",
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div>
          <strong>
            CO
          </strong>
        </div>,
        <div>
          Value: 
          100
        </div>,
        <div>
          Pressure: 
          1000
           hPa 
        </div>,
        <div>
          Precision: 
          32924
        </div>,
      ],
      "className": "pollutant-stats",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <strong>
            CO
          </strong>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "CO",
          },
          "ref": null,
          "rendered": "CO",
          "type": "strong",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Value: ",
            100,
          ],
        },
        "ref": null,
        "rendered": Array [
          "Value: ",
          100,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Pressure: ",
            1000,
            " hPa ",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Pressure: ",
          1000,
          " hPa ",
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Precision: ",
            32924,
          ],
        },
        "ref": null,
        "rendered": Array [
          "Precision: ",
          32924,
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "co",
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div>
            <strong>
              CO
            </strong>
          </div>,
          <div>
            Value: 
            100
          </div>,
          <div>
            Pressure: 
            1000
             hPa 
          </div>,
          <div>
            Precision: 
            32924
          </div>,
        ],
        "className": "pollutant-stats",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <strong>
              CO
            </strong>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "CO",
            },
            "ref": null,
            "rendered": "CO",
            "type": "strong",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Value: ",
              100,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Value: ",
            100,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Pressure: ",
              1000,
              " hPa ",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Pressure: ",
            1000,
            " hPa ",
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Precision: ",
              32924,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Precision: ",
            32924,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`PollutantStats initialization should render correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PollutantStats
    chem={
      Object {
        "precision": 23234,
        "pressure": 2000,
        "value": 132,
      }
    }
    type="so2"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "so2",
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div>
          <strong>
            SO2
          </strong>
        </div>,
        <div>
          Value: 
          132
        </div>,
        <div>
          Pressure: 
          2000
           hPa 
        </div>,
        <div>
          Precision: 
          23234
        </div>,
      ],
      "className": "pollutant-stats",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <strong>
            SO2
          </strong>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "SO2",
          },
          "ref": null,
          "rendered": "SO2",
          "type": "strong",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Value: ",
            132,
          ],
        },
        "ref": null,
        "rendered": Array [
          "Value: ",
          132,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Pressure: ",
            2000,
            " hPa ",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Pressure: ",
          2000,
          " hPa ",
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Precision: ",
            23234,
          ],
        },
        "ref": null,
        "rendered": Array [
          "Precision: ",
          23234,
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "so2",
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div>
            <strong>
              SO2
            </strong>
          </div>,
          <div>
            Value: 
            132
          </div>,
          <div>
            Pressure: 
            2000
             hPa 
          </div>,
          <div>
            Precision: 
            23234
          </div>,
        ],
        "className": "pollutant-stats",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <strong>
              SO2
            </strong>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "SO2",
            },
            "ref": null,
            "rendered": "SO2",
            "type": "strong",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Value: ",
              132,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Value: ",
            132,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Pressure: ",
              2000,
              " hPa ",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Pressure: ",
            2000,
            " hPa ",
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Precision: ",
              23234,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Precision: ",
            23234,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`PollutantStats initialization should render correctly 3`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PollutantStats
    chem={
      Object {
        "value": 2349234,
      }
    }
    type="o3"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "o3",
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div>
          O3
        </div>,
        <div>
          Value: 
          2349234
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "O3",
        },
        "ref": null,
        "rendered": "O3",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Value: ",
            2349234,
          ],
        },
        "ref": null,
        "rendered": Array [
          "Value: ",
          2349234,
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "o3",
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div>
            O3
          </div>,
          <div>
            Value: 
            2349234
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "O3",
          },
          "ref": null,
          "rendered": "O3",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Value: ",
              2349234,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Value: ",
            2349234,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`PollutantStats initialization should render correctly 4`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PollutantStats
    chem={
      Object {
        "precision": 2345234,
        "value": 34539405,
      }
    }
    type="no2"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "no2",
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div>
          NO2
        </div>,
        <div>
          Value: 
          34539405
        </div>,
        <div>
          Precision: 
          2345234
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "NO2",
        },
        "ref": null,
        "rendered": "NO2",
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Value: ",
            34539405,
          ],
        },
        "ref": null,
        "rendered": Array [
          "Value: ",
          34539405,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Precision: ",
            2345234,
          ],
        },
        "ref": null,
        "rendered": Array [
          "Precision: ",
          2345234,
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "no2",
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div>
            NO2
          </div>,
          <div>
            Value: 
            34539405
          </div>,
          <div>
            Precision: 
            2345234
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "NO2",
          },
          "ref": null,
          "rendered": "NO2",
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Value: ",
              34539405,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Value: ",
            34539405,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Precision: ",
              2345234,
            ],
          },
          "ref": null,
          "rendered": Array [
            "Precision: ",
            2345234,
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
